<resources>
    <string name="app_name">Calculator</string>
    <string name="Delete">AC</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="nol">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Kali">x</string>
    <string name="Bagi">/</string>
    <string name="kurtup">)</string>
    <string name="Kurbuk">(</string>
    <string name="titik">.</string>
    <string name="samadengan">=</string>
</resources>