<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

        <TextView
            android:id="@+id/TvMath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp25"
            android:gravity="end"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/TvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:textSize="@dimen/sp35"
            android:gravity="end"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp80"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/Delete"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnBackspace"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:tint="@color/orange"
                    app:icon="@drawable/ic_baseline_keyboard_backspace_24"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnKurungbuka"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/Kurbuk"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnKurungtutup"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/kurtup"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnTujuh"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/tujuh"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/Btndelapan"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/delapan"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnSembilan"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/sembilan"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnBagi"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/Bagi"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnEmpat"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/empat"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnLima"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/lima"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnEnam"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/enam"
                    android:backgroundTint="@color/black"
                    android:textSize="@dimen/sp25"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnKali"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/Kali"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnSatu"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/satu"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnDua"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/dua"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnTiga"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/tiga"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnMinus"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnNol"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/nol"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnTitik"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/titik"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnHitung"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/samadengan"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/orange"
                    android:layout_margin="@dimen/dp5"/>
                <Button
                    android:id="@+id/BtnPlus"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="@dimen/sp25"
                    android:backgroundTint="@color/black"
                    android:layout_margin="@dimen/dp5"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>